# hunter_RL

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: default.yaml
configs/examples/: small.yaml
docs/: PROJECT.md
hunt_env/: __init__.py  cli_defaults.py
hunt_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hunt_env/config/: __init__.py  loader.py  schema.py
hunt_env/core/: __init__.py  dynamics.py  engine.py  observation.py  rewards.py  state.py  visibility.py
hunt_env/env/: __init__.py  hunt_parallel.py  vectorized.py
hunt_env/policies/: __init__.py  obs_layout.py  rules.py
hunt_env/render/: __init__.py  mp4.py  pygame_backend.py
hunt_rl/: __init__.py  actor_critic.py  device.py  pretrain_escaper.py  pretrain_hunter.py  running_stats.py  train_log.py  trainer.py
pretrained/escaper_rule/: README.txt  escaper.pt  run.json
runs/: _smoke_ship.pt  bilateral_ppo.pt  escaper_rl.pt  hunter_rl.pt
scripts/: human_play.py  measure_rule_rule_winrate.py  pretrain_escaper_rule.py  pretrain_hunter_rule.py  train_bilateral_ppo.py  train_escaper_ppo_rule_hunter.py  train_hunter_ppo_rule_escaper.py  train_ppo.py  viz_dual_policy.py  viz_escaper_policy.py  viz_hunter_policy.py  viz_rule_baseline.py
tests/: conftest.py  test_config.py  test_dynamics.py  test_engine.py  test_env_api.py  test_obs_layout.py  test_observation.py  test_ppo_escaper_rule_hunter.py  test_ppo_hunter_rule_escaper.py  test_ppo_smoke.py  test_pretrain_escaper.py  test_pretrain_hunter.py  test_rewards.py  test_rules.py  test_spawn.py  test_visibility.py
(+4 files in other folders)
